--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@saas-ui/react": "1.6.1",
     "@saas-ui/sidebar": "^0.9.0",
     "@saas-ui/web3": "^1.4.0",
+    "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@solana/wallet-adapter-react-ui": "^0.9.29",
     "@solana/wallet-adapter-wallets": "^0.19.15",
