--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fontsource/fira-code": "^4.5.13",
     "@fontsource/fira-mono": "^4.5.10",
     "@fontsource/inter": "^4.5.14",
+    "@fontsource/open-sans": "^4.5.14",
+    "@fontsource/raleway": "^4.5.12",
     "@saas-ui/app-shell": "^1.1.0",
     "@saas-ui/react": "1.6.1",
     "@saas-ui/sidebar": "^0.9.0",
