--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-code-blocks": "^0.0.8",
     "react-dom": "17.0.1",
     "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
     "react-slick": "^0.28.1",
     "yarn": "^1.22.10",
     "zustand": "^4.3.6"
