:rotating_light: critical fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@/components/*": ["components/*"],
       "@/utils/*": ["utils/*"],
       "@/layout/*": ["layout/*"]
-    }
+    },
+    "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
