--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/node": "^14.14.32",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.3",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-slick": "^0.23.6",
     "babel-jest": "^26.6.3",
     "husky": "^4.3.8",
