--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "chakra-templates",
+  "name": "decaptcha-frontend",
   "version": "0.1.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hauptrolle/chakra-templates.git"
+    "url": "git+https://github.com/decaptcha/frontend.git"
   },
   "author": "Archish Thakkar",
   "scripts": {
@@ -22,51 +22,51 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@chakra-ui/icons": "^1.0.14",
-    "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.0.0",
+    "@babel/core": "^7.21.0",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/kumbh-sans": "^4.5.12",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
-    "@hypertheme-editor/chakra-ui": "^0.1.2",
+    "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@solana/wallet-adapter-react-ui": "^0.9.29",
     "@solana/wallet-adapter-wallets": "^0.19.15",
     "@solana/web3.js": "^1.73.3",
-    "@splitbee/web": "^0.2.4",
-    "directory-tree": "^2.2.5",
-    "framer-motion": "^4.1.17",
-    "next": "12.1.0",
-    "next-seo": "^4.17.0",
+    "@splitbee/web": "^0.3.0",
+    "directory-tree": "^3.5.1",
+    "framer-motion": "^10.2.3",
+    "next": "^13.2.3",
+    "next-seo": "^5.15.0",
     "nprogress": "^0.2.0",
     "raw-loader": "^4.0.2",
-    "re-resizable": "^6.9.0",
-    "react": "17.0.1",
-    "react-code-blocks": "^0.0.8",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.3.1",
+    "re-resizable": "^6.9.9",
+    "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
-    "react-slick": "^0.28.1",
-    "yarn": "^1.22.10",
+    "react-slick": "^0.29.0",
+    "yarn": "^1.22.19",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@types/node": "^14.14.32",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^18.14.6",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^17.0.3",
     "@types/react-lottie": "^1.2.6",
-    "@types/react-slick": "^0.23.6",
-    "babel-jest": "^26.6.3",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "react-test-renderer": "^17.0.1",
-    "typescript": "^4.2.3"
+    "@types/react-slick": "^0.23.10",
+    "babel-jest": "^29.5.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.4",
+    "pretty-quick": "^3.1.3",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^4.9.5",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
