--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^18.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "react-slick": "^0.29.0",
