--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@faker-js/faker": "^7.6.0",
     "@fontsource/kumbh-sans": "^4.5.12",
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
@@ -31,6 +32,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.15",
     "@solana/web3.js": "^1.73.3",
     "@splitbee/web": "^0.3.0",
+    "chart.js": "^4.2.1",
     "directory-tree": "^3.5.1",
     "framer-motion": "^10.2.3",
     "next": "^13.2.3",
@@ -39,6 +41,7 @@
     "raw-loader": "^4.0.2",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
