--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@fontsource/open-sans": "^4.5.14",
     "@fontsource/raleway": "^4.5.12",
     "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
+    "@react-three/drei": "^9.57.3",
+    "@react-three/fiber": "^8.12.0",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@solana/wallet-adapter-react-ui": "^0.9.29",
     "@solana/wallet-adapter-wallets": "^0.19.15",
     "@solana/web3.js": "^1.73.3",
     "@splitbee/web": "^0.3.0",
+    "@types/styled-components": "^5.1.26",
     "chart.js": "^4.2.1",
     "directory-tree": "^3.5.1",
     "framer-motion": "^10.2.3",
@@ -45,11 +48,14 @@
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-globe.gl": "^2.23.3",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "react-slick": "^0.29.0",
     "sass": "^1.59.2",
+    "styled-components": "^5.3.9",
+    "three": "^0.150.1",
     "yarn": "^1.22.19",
     "zustand": "^4.3.6"
   },
@@ -60,6 +66,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react-lottie": "^1.2.6",
     "@types/react-slick": "^0.23.10",
+    "@types/three": "^0.149.0",
     "babel-jest": "^29.5.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
