--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
     "@react-three/drei": "^9.57.3",
     "@react-three/fiber": "^8.12.0",
+    "@solana/spl-token": "^0.3.7",
     "@solana/wallet-adapter-base": "^0.9.22",
     "@solana/wallet-adapter-react": "^0.15.30",
     "@solana/wallet-adapter-react-ui": "^0.9.29",
